<resources>
    <string name="app_name">LeQuiz</string>


    <string name="Sign_in">Sign in</string>
    <string name="Sign_out">Sign out</string>
    <string name="i_dont_have_account">I don\'t have an account</string>

    <string name="user_name"> </string>
    <string name="user_first_name"> </string>
    <string name="user_email">lequiz@gmail.com</string>
    <string name="user_sex">Male</string>
    <string name="user_location">KrishnaPuri Hazaribag</string>
    <string name="user_date_of_birth">05 Feb 1998</string>
    <string name="user_winner_message">You have received ₹150 </string>

    <string name="login_preference">com.ramu.sharedPreferenceexample_login_preference</string>
    <string name="login_status_preference">com.ramu.sharedPreferenceexample_login_preference_status</string>


    <!-- Category name for Current_affairs [CHAR LIMIT=20] -->
    <string name="current_Affairs">Current Affairs</string>
    <string name="weekly_current_affairs">Weekly current affairs</string>

    <!--Category name for Mathematics-->
    <string name="mathematics">Mathematics</string>

    <!--Category name for Reasoning-->
    <string name="reasoning">Reasoning</string>

    <!--Category name for Computer-->
    <string name="computer">Computer</string>

    <!--Category name for Science-->
    <string name="general_science">General Science</string>


    <!--Category fpr technology-->
    <string name="technology">Technology</string>

    <!--Category for sport-->
    <string name="sports">Sports</string>

    <!--Category for special-->
    <string name="special">Special</string>

    <!--Category name for Entertainment-->
    <string name="entertainment">Entertainment</string>

    <!--Category name for class_wise-->
    <string name="english">English</string>


    <!--user level string-->
    <string name="user_level">Level 6</string>

    <!--user xp value-->
    <string name="level_xp">1024 XP</string>
    <!--content Discription of profile image-->
    <string name="profile">Profile</string>


    <!--user mobile no-->
    <string name="user_mobile_no">9693108484</string>
    <string name="design">design</string>

    <!--wishing good morning-->
    <string name="wishing">Good Morning</string>

    <!--header_background_image-->
    <string name="header_background_image">navigation background image</string>


    <!--for navigation drawer layout-->
    <string name="open">Open</string>
    <string name="close">Close</string>

    <string name="nav_header_desc">Navigation header profile image</string>


    <!--navigation strings and action bar menu-->
    <string name="home">Home</string>
    <string name="random_quiz">Play Random</string>
    <string name="job_alert">Job Alerts</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="job_alerts">Job alerts</string>
    <string name="notifications">Notifications</string>
    <string name="quiz_factory">Quiz factory</string>
    <string name="payment">Payment</string>
    <string name="settings">Settings</string>
    <string name="invite_friends">Invite friend</string>
    <string name="rate_us">Rate Us</string>
    <string name="send_feedback">Send feedback</string>
    <string name="about_us">About us</string>
    <string name="communicate">Communicate</string>
    <string name="earning">00</string>

    <string name="user_ranking">01</string>

    <!-- Strings for learn section -->
    <string name="subHeadingOnLearnSection">Read Our Lessons | Play Quiz</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Content Description Learn Section -->

    <string name="start_button_current_affairs">Current Affairs Start Button</string>
    <string name="play_button_current_affairs">Current Affairs Play Button</string>
    <string name="start_button_technology">Technology Start Button</string>
    <string name="play_button_technology">Technology Play Button</string>
    <string name="start_button_entertainment">Entertainment Start Button</string>
    <string name="play_button_entertainment">Entertainment Play Button</string>
    <string name="start_button_sports">Sports Start Button</string>
    <string name="play_button_sports">Sports Play Button</string>
    <string name="start_button_computer">Computer Start Button</string>
    <string name="play_button_computer">Computer Play Button</string>
    <string name="start_button_mathematics">Mathematics Start Button</string>
    <string name="play_button_mathematics">Mathematics Play Button</string>
    <string name="start_button_reasoning">Reasoning Affairs Start Button</string>
    <string name="play_button_reasoning">Reasoning Affairs Play Button</string>
    <string name="start_button_general_science">General Science Start Button</string>
    <string name="play_button_general_science">General Science Play Button</string>
    <string name="start_button_english">English Science Start Button</string>
    <string name="play_button_english">English Science Play Button</string>
    <string name="start_button_special">English Science Start Button</string>
    <string name="play_button_special">English Science Play Button</string>
    <string name="ACCOUNT">ACCOUNT</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="start_your_quiz">Start Your Quiz</string>
    <string name="weekly_message">Weekly current affairs</string>
    <string name="grab_your_first_job">Grab your first job down below</string>
    <string name="Change_Password">Change Password</string>
    <string name="SYSTEM">SYSTEM</string>
    <string name="Push_notifications">Push Notifications</string>
    <string name="On">On</string>
    <string name="Off">Off</string>
    <string name="Night_Mode">Night Mode</string>
    <string name="Sound">Sound</string>
    <string name="Enable_in_app_sounds">Enable in-app sounds</string>
    <string name="Language">Language</string>
    <string name="English">English</string>
    <string name="Hindi">Hindi</string>
    <string name="Terms_of_use">Terms Of Use</string>
    <string name="changeAvatar">CHANGE AVATAR</string>
    <string name="hardCodedName">Name</string>
    <string name="hardCodePhone">Phone</string>
    <string name="hardCodeEmail">E-mail</string>
    <string name="hardCodeLocation">Location</string>
    <string name="hardCodeSave">SAVE</string>
    <string name="usersPaidMonthly">Users Paid (Month)</string>
    <string name="userWonBalance"> 100 </string>


    <!--spinner title-->
    <string name="spinner_title">Choose Category</string>
    <string name="right_arrow">Right Arrow Down</string>
    <string name="title_activity_login">Login</string>
    <string name="country_selector">+91</string>
    <string name="profile_default_status">I\'m new on LeQuiz!</string>


</resources>
