<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/nav_group_1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/job_alerts"
            android:icon="@drawable/drawer_job_alerts1"
            android:title="@string/job_alerts" />
    </group>

    <group
        android:id="@+id/nav_group_2"
        android:checkableBehavior="single">

        <item
            android:id="@+id/leaderboard"
            android:icon="@drawable/drawer_leaderboard"
            android:title="@string/leaderboard" />

        <item
            android:id="@+id/payment"
            android:icon="@drawable/drawer_payment"
            android:title="@string/payment" />

        <item
            android:id="@+id/quiz_factory"
            android:icon="@drawable/drawer_quiz_factory"
            android:title="@string/quiz_factory"/>

        <item
            android:id="@+id/settings"
            android:icon="@drawable/drawer_settings"
            android:title="@string/settings" />

        <item
            android:id="@+id/invite_friends"
            android:icon="@drawable/drawer_invite_firend"
            android:title="@string/invite_friends" />

    </group>

    <group
        android:id="@+id/nav_group_3"
        android:checkableBehavior="single">

        <item
            android:id="@+id/send_feedback"
            android:title="@string/send_feedback" />

        <item
            android:id="@+id/about_us"
            android:title="@string/about_us" />

    </group>


</menu>