<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background_mathematics"
    android:fitsSystemWindows="false"
    tools:context=".MathematicsActivity">
    <include
        android:id="@+id/mathematics_toolbar"
        android:layout_alignParentTop="true"
        layout="@layout/category_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="322dp"
        android:layout_height="187dp"
        android:contentDescription="@string/mathematics"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/mathematics_background_image" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="99dp"
        android:layout_marginStart="16dp"
        android:theme="@style/Topic_Text_Style"
        android:text="@string/mathematics"
        android:id="@+id/heading_on_mathematics"
        tools:ignore="RelativeOverlap" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:id="@+id/subheading_on_mathematics"
        android:layout_below="@+id/heading_on_mathematics"
        android:layout_marginStart="16dp"
        android:text="@string/subHeadingOnLearnSection"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:elevation="2dp"
        android:layout_marginTop="60dp"
        android:layout_below="@+id/subheading_on_mathematics"
        android:background="@drawable/rounded_layout_learn_mathematics"
        android:theme="@style/Inner_Relative_Layout"
        android:id="@+id/relative_card_view_mathematics"
        android:layout_marginRight="16dp"
        >
        <ImageView
            android:layout_width="58dp"
            android:layout_height="58dp"
            android:clickable="true"
            android:contentDescription="@string/start_button_mathematics"
            android:focusable="true"
            android:src="@drawable/start_button_mathematics"
            android:layout_alignParentEnd="true"/>
        <ImageView
            android:contentDescription="@string/play_button_mathematics"
            android:layout_width="58dp"
            android:layout_height="58dp"
            android:src="@drawable/play_button_mathematics"
            android:layout_alignParentStart="true"
            android:id="@+id/play_button_mathematics"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:id="@+id/hey_user_name"
            android:layout_marginStart="58dp"
            android:paddingTop="9dp"
            android:textColor="@android:color/white"
            android:layout_alignParentStart="true"
            tools:ignore="RelativeOverlap" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_your_quiz"
            android:textColor="@android:color/white"
            android:layout_below="@+id/hey_user_name"
            android:paddingTop="3dp"
            android:layout_marginStart="58dp"
            android:textSize="12sp"/>
    </RelativeLayout>

</RelativeLayout>

